[package]
name = "donutsmp-intercept"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.13.0" }
azalea-crypto = { git = "https://github.com/azalea-rs/azalea", version = "0.13.0" }
chrono = "0.4.41"
futures = "0.3.31"
parking_lot = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
